# simple_html

./: .gitignore  LICENSE  MANIFEST  README.md  bench.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build-wheels.yml  build_wheels.yml  push.yml  release.yml
bench/: current_code.py  dom.py  fast.py  jin.py  jinja_render.py  run.py  simple.py
bench/jinja_example/templates/: basic.html  large_page.html  lorem_ipsum.html  template.html
requirements/: dev.txt
scripts/: templatize.py
simple_html/: __init__.py  attributes.py  core.py  doctype.py  nodes.py  render.py  templatize.py  typedefs.py  utils.py
simple_html/utils/: templatize.py
tests/: test_core.py  test_render.py  test_simple_html.py  test_templatize.py
tests/test_utils/: test_templatize.py
